k8s/overlays/staging/middleware-redirect-https.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: passontw-services-staging
spec:
  redirectScheme:
    scheme: https
    permanent: true
